# ai-marketplace-assistant

./: .env.example  .gitignore  DEV.md  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
marketplace_assistant/: __init__.py
marketplace_assistant/analytics/: __init__.py  llm_analytics.py  sentiment.py  summarizer.py  trends.py
marketplace_assistant/api/: __init__.py  fastapi_app.py  models.py
marketplace_assistant/bot/: __init__.py  keyboards.py  telegram_bot.py
marketplace_assistant/models/: __init__.py  feedback.py  product.py
marketplace_assistant/parsers/: __init__.py  base.py  errors.py  ozon.py  wildberries.py
marketplace_assistant/utils/: cache.py  logger.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_bot.py  test_config.py  test_integration.py  test_parsers.py
